[package]
name = "pimc_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ndarray = { version = "0.16.1", features = ["serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dev-dependencies]
tempfile = "3.14.0"

[lib]
path="src/lib.rs"
