[package]
name = "pimc"
version = "0.1.0"
edition = "2021"
authors = ["g-spada <gabcloud@pm.me>"]
description = "Scientific computing library for Path Integral Monte Carlo (PIMC) simulations."
repository = "https://github.com/g-spada/pimc"
license = "MIT"

[dependencies]
log = "0.4.22"
ndarray = { version = "0.16.1", features = ["serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dev-dependencies]
env_logger = "0.11.5"
tempfile = "3.14.0"

[lib]
path="src/lib.rs"
